fixed job card alignment issues,

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,12 +77,12 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: #0a0a0a;
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: #171717;
   --main: #9237E3;
   --heading: #0F2239;
   --para: #414141;
